--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,23 @@
 certifi==2022.12.7
-charset-normalizer==2.1.1
+charset-normalizer==3.0.1
 colorama==0.4.6
+elevate==0.1.3
 filelock==3.9.0
+gitdb==4.0.10
+GitPython==3.1.30
 huggingface-hub==0.11.1
 idna==3.4
-kthread==0.2.3
-numpy==1.24.1
+numpy
 packaging==23.0
-PyAudio==0.2.13
 pySmartDL==1.3.4
 PyYAML==6.0
 regex==2022.10.31
-requests==2.28.1
+requests
+smmap==5.0.0
 SpeechRecognition==3.9.0
 tokenizers==0.13.2
-torch==1.13.1
-tqdm==4.64.1
+torch
+tqdm
 transformers==4.25.1
 typing_extensions==4.4.0
 urllib3==1.26.14
-gitpython
-elevate
-
