--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,14 +1,15 @@
-name: Python Tests
+name: Test
 
 on: [push, pull_request]
 
 jobs:
   test:
-    runs-on: ubuntu-latest
-
     strategy:
       matrix:
-        python-version: [3.7,3.8,3.9,3.10.12,3.11]
+        python-version: [3.6.15, 3.7, 3.8, 3.9, 3.10.6, 3.11]
+      os: [ubuntu-latest, windows-latest, macos-latest]
+
+    runs-on: ${{ matrix.os }}
 
     steps:
     - name: Checkout repository
@@ -23,6 +24,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt  # If you have any requirements
-
+        
     - name: Run tests
       run: python test/test.py
