--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ jobs:
   test:
     strategy:
       matrix:
-        python-version: [3.6.15, 3.7, 3.8, 3.9, 3.10.6, 3.11]
+        python-version: [3.7, 3.8, 3.9, 3.10.6, 3.11]
         os: [ubuntu-latest, windows-latest, macos-latest]
 
     runs-on: ${{ matrix.os }}
