--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,36 +1,36 @@
-# name: Test
+name: Test
 
-# on:
-#   push:
-#     branches:
-#       - main
-#   pull_request:
-#     branches:
-#       - main
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 
-# jobs:
-#   test:
-#     strategy:
-#       matrix:
-#         python-version: [3.9, 3.10.6]
-#         os: [ubuntu-latest, windows-latest, macos-latest]
+jobs:
+  test:
+    strategy:
+      matrix:
+        python-version: [3.9, 3.10.6]
+        os: [ubuntu-latest, windows-latest, macos-latest]
 
-#     runs-on: ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
 
-#     steps:
-#     - name: Checkout repository
-#       uses: actions/checkout@v2
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-#     - name: Set up Python
-#       uses: actions/setup-python@v2
-#       with:
-#         python-version: ${{ matrix.python-version }}
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
 
-#     - name: Install dependencies
-#       run: |
-#         python -m pip install --upgrade pip
-#         pip install -r requirements.txt  # If you have any requirements
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt  # If you have any requirements
         
-#     - name: Run tests
-#       run: python test/test.py
+    - name: Run tests
+      run: python test/test.py
