--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt  # If you have any requirements
+        pip install -r requirements-dev.txt  # If you have any requirements
         
     - name: Run tests
       run: python test/test.py
